parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
Rule 2     variablesAuxiliar -> creaTablaVar variables
Rule 3     variablesAuxiliar -> empty
Rule 4     pantallaAuxiliar -> pantalla
Rule 5     pantallaAuxiliar -> empty agregarCuadDefectoPantalla
Rule 6     figurasAuxiliar -> figuras
Rule 7     figurasAuxiliar -> empty
Rule 8     gravedadAuxiliar -> gravedad
Rule 9     gravedadAuxiliar -> empty agregarCuadDefectoGravedad
Rule 10    funcionesAuxiliar -> FUNCIONES funciones
Rule 11    funcionesAuxiliar -> empty
Rule 12    apoloAuxiliar -> APOLO apoloTablaFunc agregaFuncTabla creaTablaVar bloque
Rule 13    agregarIdHaciaPilas -> empty
Rule 14    agregarOperador -> empty
Rule 15    compSemMasMenosYGenCuad -> empty
Rule 16    comprobarSemanticaPorEntre -> empty
Rule 17    agregarPisoFalso -> empty
Rule 18    eliminarPisoFalso -> empty
Rule 19    comprobarSemanticaOperadoresRelacionales -> empty
Rule 20    compSemYGenCuadYO -> empty
Rule 21    agregarOperando -> empty
Rule 22    agregarlistaAPilaOperando -> empty
Rule 23    agregarCuadYCompSemAsignacion -> empty
Rule 24    agregarCuadYCompSemPantalla -> empty
Rule 25    agregarCuadDefectoPantalla -> empty
Rule 26    agregarCuadYCompSemGravedad -> empty
Rule 27    agregarCuadDefectoGravedad -> empty
Rule 28    agregarCuadEScrituraExpresion -> empty
Rule 29    agregarCuadEscrituraSPCTE -> empty
Rule 30    agregarOperadorDibujarLinea -> empty
Rule 31    agregarOperadorDibujar -> empty
Rule 32    agregarCuadDibujarGen -> empty
Rule 33    generarCuadCondicionGotoFIf -> empty
Rule 34    llenarGotof -> empty
Rule 35    generarCuadCondicionGotoFElse -> empty
Rule 36    agregarAPilaSaltosRegresoCiclo -> empty
Rule 37    generarCuadCondCiclo -> empty
Rule 38    generarCuadRetCiclo -> empty
Rule 39    genCuadRetorno -> empty
Rule 40    checarRetorno -> empty
Rule 41    agregarOperadorRetorno -> empty
Rule 42    agregarOperandoVoid -> empty
Rule 43    checarSiExisteFuncion -> empty
Rule 44    generarAccionERA -> empty
Rule 45    generarAccionParam -> empty
Rule 46    generarAccionGoSub -> empty
Rule 47    checarSiExisteFiguraId -> empty
Rule 48    listaVar -> empty
Rule 49    apoloTablaFunc -> empty
Rule 50    creaTablaFunc -> empty
Rule 51    agregaGlobalTabla -> empty
Rule 52    asignarAlcance -> empty
Rule 53    creaTablaVar -> empty
Rule 54    checarDefID -> empty
Rule 55    agregaVarTabla -> empty
Rule 56    agregaFuncTabla -> empty
Rule 57    agregaParamFunc -> empty
Rule 58    liberaTablaVars -> empty
Rule 59    creaFigFuncSimb -> empty
Rule 60    checarFiguraId -> empty
Rule 61    creaFigVar -> empty
Rule 62    variables -> VARIABLES variablesAuxiliar1 ID agregaVarTabla variablesAuxiliar2 SEMICOLON variablesAuxiliar3
Rule 63    variablesAuxiliar1 -> tipo
Rule 64    variablesAuxiliar1 -> tipo_lista
Rule 65    variablesAuxiliar2 -> COMMA ID agregaVarTabla variablesAuxiliar2
Rule 66    variablesAuxiliar2 -> empty
Rule 67    variablesAuxiliar3 -> variablesAuxiliar1 ID agregaVarTabla variablesAuxiliar2 SEMICOLON variablesAuxiliar3
Rule 68    variablesAuxiliar3 -> empty
Rule 69    termino -> factor comprobarSemanticaPorEntre terminoAuxiliar1
Rule 70    terminoAuxiliar1 -> operadorEntre agregarOperador termino
Rule 71    terminoAuxiliar1 -> operadorPor agregarOperador termino
Rule 72    terminoAuxiliar1 -> empty
Rule 73    retorno -> REGRESAR checarRetorno agregarOperadorRetorno retornoAuxiliar1 SEMICOLON genCuadRetorno
Rule 74    retornoAuxiliar1 -> expresion
Rule 75    retornoAuxiliar1 -> sp_cte agregarOperando
Rule 76    retornoAuxiliar1 -> empty agregarOperandoVoid
Rule 77    pantalla -> PANTALLA L_PAREN exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemPantalla
Rule 78    gravedad -> GRAVEDAD L_PAREN exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemGravedad
Rule 79    funciones -> funcionesAuxiliar1 ID asignarAlcance agregaFuncTabla creaTablaVar L_PAREN tipo ID agregaParamFunc funcionesAuxiliar2 R_PAREN L_BRACES funcionesAuxiliar3 funcionesAuxiliar4 R_BRACES liberaTablaVars
Rule 80    funcionesAuxiliar1 -> tipo
Rule 81    funcionesAuxiliar1 -> VOID
Rule 82    funcionesAuxiliar2 -> COMMA tipo ID agregaParamFunc funcionesAuxiliar2
Rule 83    funcionesAuxiliar2 -> empty
Rule 84    funcionesAuxiliar3 -> variables
Rule 85    funcionesAuxiliar3 -> empty
Rule 86    funcionesAuxiliar4 -> estatuto funcionesAuxiliar4
Rule 87    funcionesAuxiliar4 -> empty
Rule 88    figuras -> FIGURAS creaFigFuncSimb asignarAlcance figura ID checarFiguraId L_BRACES figura_atributos figura_atributosAuxiliar2 R_BRACES creaFigVar figurasAuxiliar1 SEMICOLON
Rule 89    figurasAuxiliar1 -> COMMA figura ID checarFiguraId L_BRACES figura_atributos figura_atributosAuxiliar2 R_BRACES creaFigVar figurasAuxiliar1
Rule 90    figurasAuxiliar1 -> empty
Rule 91    figura -> CUADRADO
Rule 92    figura -> CIRCULO
Rule 93    figura -> TRIANGULO
Rule 94    figura -> LINEA
Rule 95    figura_atributos -> MEDIDA COLON CTE_I
Rule 96    figura_atributos -> figura_atributosAuxiliar1 COLON CTE_F
Rule 97    figura_atributos -> MOVIBLE COLON cte_bool
Rule 98    figura_atributos -> COLOR COLON color_cte
Rule 99    figura_atributosAuxiliar1 -> FRICCION
Rule 100   figura_atributosAuxiliar1 -> MASA
Rule 101   figura_atributosAuxiliar1 -> REBOTE
Rule 102   figura_atributosAuxiliar2 -> COMMA figura_atributos figura_atributosAuxiliar2
Rule 103   figura_atributosAuxiliar2 -> empty
Rule 104   exp -> termino compSemMasMenosYGenCuad expAuxiliar1
Rule 105   expAuxiliar1 -> operadorMenos agregarOperador exp
Rule 106   expAuxiliar1 -> operadorMas agregarOperador exp
Rule 107   expAuxiliar1 -> empty
Rule 108   estatuto -> asignacion SEMICOLON
Rule 109   estatuto -> condicion
Rule 110   estatuto -> escritura
Rule 111   estatuto -> ciclo
Rule 112   estatuto -> dibujar
Rule 113   estatuto -> llamada SEMICOLON
Rule 114   estatuto -> incremento SEMICOLON
Rule 115   estatuto -> retorno
Rule 116   dibujar -> dibujarAuxiliar1 COMMA exp COMMA exp R_PAREN SEMICOLON agregarCuadDibujarGen
Rule 117   dibujarAuxiliar1 -> DIBUJAR agregarOperadorDibujar L_PAREN ID checarSiExisteFiguraId
Rule 118   dibujarAuxiliar1 -> DIBUJAR_LINEA agregarOperadorDibujarLinea L_PAREN ID checarSiExisteFiguraId COMMA exp COMMA exp
Rule 119   ciclo -> CICLO L_PAREN asignacion SEMICOLON agregarAPilaSaltosRegresoCiclo expresion SEMICOLON generarCuadCondCiclo incremento R_PAREN bloque generarCuadRetCiclo
Rule 120   condicion -> SI L_PAREN expresion R_PAREN generarCuadCondicionGotoFIf bloque condicionAuxiliar1 SEMICOLON llenarGotof
Rule 121   condicionAuxiliar1 -> SI_NO generarCuadCondicionGotoFElse bloque
Rule 122   condicionAuxiliar1 -> empty
Rule 123   bloque -> L_BRACES bloqueAuxiliar1 R_BRACES
Rule 124   bloqueAuxiliar1 -> empty
Rule 125   bloqueAuxiliar1 -> estatuto bloqueAuxiliar1
Rule 126   incremento -> ID checarDefID agregarIdHaciaPilas incrementoAuxiliar1 agregarOperador exp agregarCuadYCompSemAsignacion
Rule 127   incrementoAuxiliar1 -> PLUS_EQUAL_OP
Rule 128   incrementoAuxiliar1 -> MINUS_EQUAL_OP
Rule 129   asignacion -> ID checarDefID agregarIdHaciaPilas ASSIGN_OP agregarOperadorAsignacion asignacionAuxiliar1 agregarCuadYCompSemAsignacion
Rule 130   agregarOperadorAsignacion -> empty
Rule 131   asignacionAuxiliar1 -> expresion
Rule 132   asignacionAuxiliar1 -> lista_cte agregarlistaAPilaOperando
Rule 133   asignacionAuxiliar1 -> sp_cte agregarOperando
Rule 134   escritura -> IMPRIMIR L_PAREN escrituraAuxiliar1 escrituraAuxiliar2 R_PAREN SEMICOLON
Rule 135   escrituraAuxiliar1 -> expresion agregarCuadEScrituraExpresion
Rule 136   escrituraAuxiliar1 -> sp_cte agregarCuadEscrituraSPCTE
Rule 137   escrituraAuxiliar2 -> COMMA escrituraAuxiliar1 escrituraAuxiliar2
Rule 138   escrituraAuxiliar2 -> empty
Rule 139   llamada -> ID checarSiExisteFuncion generarAccionERA L_PAREN llamadaAuxiliar1 R_PAREN generarAccionGoSub
Rule 140   llamadaAuxiliar1 -> llamadaAuxiliar2 generarAccionParam llamadaAuxiliar3
Rule 141   llamadaAuxiliar1 -> empty
Rule 142   llamadaAuxiliar2 -> exp
Rule 143   llamadaAuxiliar2 -> sp_cte agregarOperando
Rule 144   llamadaAuxiliar3 -> COMMA llamadaAuxiliar2 generarAccionParam llamadaAuxiliar3
Rule 145   llamadaAuxiliar3 -> empty
Rule 146   expresion -> exp expresionAuxiliar1
Rule 147   expresionAuxiliar1 -> expresionAuxiliar2 agregarOperador exp comprobarSemanticaOperadoresRelacionales expresionAuxiliar3
Rule 148   expresionAuxiliar1 -> empty
Rule 149   expresionAuxiliar2 -> N_EQUAL_OP
Rule 150   expresionAuxiliar2 -> EQUAL_OP
Rule 151   expresionAuxiliar2 -> BIGGER_THAN
Rule 152   expresionAuxiliar2 -> LESS_THAN
Rule 153   expresionAuxiliar2 -> BIGGER_EQUAL_THAN
Rule 154   expresionAuxiliar2 -> LESS_EQUAL_THAN
Rule 155   expresionAuxiliar3 -> expresionAuxiliar4 agregarOperador expresion compSemYGenCuadYO
Rule 156   expresionAuxiliar3 -> empty
Rule 157   expresionAuxiliar4 -> operadorY
Rule 158   expresionAuxiliar4 -> operadorO
Rule 159   factor -> L_PAREN agregarPisoFalso expresion R_PAREN eliminarPisoFalso
Rule 160   factor -> factorAuxiliar1 factorAuxiliar2
Rule 161   factor -> factorAuxiliar3
Rule 162   factorAuxiliar1 -> PLUS_OP
Rule 163   factorAuxiliar1 -> MINUS_OP
Rule 164   factorAuxiliar2 -> CTE_I
Rule 165   factorAuxiliar2 -> CTE_F
Rule 166   factorAuxiliar3 -> factorAuxiliar2
Rule 167   factorAuxiliar3 -> ID checarDefID agregarIdHaciaPilas
Rule 168   factorAuxiliar3 -> llamada
Rule 169   lista_cte -> L_BRACKETS lista_cteAuxiliar1 lista_cteAuxiliar2 R_BRACKETS
Rule 170   lista_cteAuxiliar1 -> exp
Rule 171   lista_cteAuxiliar1 -> sp_cte
Rule 172   lista_cteAuxiliar2 -> COMMA lista_cteAuxiliar1 lista_cteAuxiliar2
Rule 173   lista_cteAuxiliar2 -> empty
Rule 174   tipo_lista -> LISTA listaVar tipo L_BRACKETS CTE_I R_BRACKETS
Rule 175   tipo -> ENTERO
Rule 176   tipo -> FLOTANTE
Rule 177   tipo -> BOOLEANO
Rule 178   tipo -> TEXTO
Rule 179   color_cte -> ROJO
Rule 180   color_cte -> VERDE
Rule 181   color_cte -> AZUL
Rule 182   color_cte -> AMARILLO
Rule 183   color_cte -> ROSA
Rule 184   color_cte -> VIOLETA
Rule 185   sp_cte -> CTE_STRING
Rule 186   sp_cte -> cte_bool
Rule 187   cte_bool -> VERDADERO
Rule 188   cte_bool -> FALSO
Rule 189   operadorMas -> PLUS_OP
Rule 190   operadorMenos -> MINUS_OP
Rule 191   operadorPor -> TIMES_OP
Rule 192   operadorEntre -> DIV_OP
Rule 193   operadorY -> AND
Rule 194   operadorO -> OR
Rule 195   empty -> <empty>

Terminals, with rules where they appear

AMARILLO             : 182
AND                  : 193
APOLO                : 12
ASSIGN_OP            : 129
AZUL                 : 181
BIGGER_EQUAL_THAN    : 153
BIGGER_THAN          : 151
BOOLEANO             : 177
CICLO                : 119
CIRCULO              : 92
COLON                : 95 96 97 98
COLOR                : 98
COMMA                : 65 77 78 82 89 102 116 116 118 118 137 144 172
CTE_F                : 96 165
CTE_I                : 95 164 174
CTE_STRING           : 185
CUADRADO             : 91
DIBUJAR              : 117
DIBUJAR_LINEA        : 118
DIV_OP               : 192
ENTERO               : 175
EQUAL_OP             : 150
FALSO                : 188
FIGURAS              : 88
FLOTANTE             : 176
FRICCION             : 99
FUNCIONES            : 10
GRAVEDAD             : 78
ID                   : 1 62 65 67 79 79 82 88 89 117 118 126 129 139 167
IMPRIMIR             : 134
LESS_EQUAL_THAN      : 154
LESS_THAN            : 152
LINEA                : 94
LISTA                : 174
L_BRACES             : 79 88 89 123
L_BRACKETS           : 169 174
L_PAREN              : 77 78 79 117 118 119 120 134 139 159
MASA                 : 100
MEDIDA               : 95
MINUS_EQUAL_OP       : 128
MINUS_OP             : 163 190
MOVIBLE              : 97
N_EQUAL_OP           : 149
OR                   : 194
PANTALLA             : 77
PLUS_EQUAL_OP        : 127
PLUS_OP              : 162 189
PROGRAMA             : 1
REBOTE               : 101
REGRESAR             : 73
ROJO                 : 179
ROSA                 : 183
R_BRACES             : 79 88 89 123
R_BRACKETS           : 169 174
R_PAREN              : 77 78 79 116 119 120 134 139 159
SEMICOLON            : 1 62 67 73 77 78 88 108 113 114 116 119 119 120 134
SI                   : 120
SI_NO                : 121
TEXTO                : 178
TIMES_OP             : 191
TRIANGULO            : 93
VARIABLES            : 62
VERDADERO            : 187
VERDE                : 180
VIOLETA              : 184
VOID                 : 81
error                : 

Nonterminals, with rules where they appear

agregaFuncTabla      : 12 79
agregaGlobalTabla    : 1
agregaParamFunc      : 79 82
agregaVarTabla       : 62 65 67
agregarAPilaSaltosRegresoCiclo : 119
agregarCuadDefectoGravedad : 9
agregarCuadDefectoPantalla : 5
agregarCuadDibujarGen : 116
agregarCuadEScrituraExpresion : 135
agregarCuadEscrituraSPCTE : 136
agregarCuadYCompSemAsignacion : 126 129
agregarCuadYCompSemGravedad : 78
agregarCuadYCompSemPantalla : 77
agregarIdHaciaPilas  : 126 129 167
agregarOperador      : 70 71 105 106 126 147 155
agregarOperadorAsignacion : 129
agregarOperadorDibujar : 117
agregarOperadorDibujarLinea : 118
agregarOperadorRetorno : 73
agregarOperando      : 75 133 143
agregarOperandoVoid  : 76
agregarPisoFalso     : 159
agregarlistaAPilaOperando : 132
apoloAuxiliar        : 1
apoloTablaFunc       : 12
asignacion           : 108 119
asignacionAuxiliar1  : 129
asignarAlcance       : 79 88
bloque               : 12 119 120 121
bloqueAuxiliar1      : 123 125
checarDefID          : 126 129 167
checarFiguraId       : 88 89
checarRetorno        : 73
checarSiExisteFiguraId : 117 118
checarSiExisteFuncion : 139
ciclo                : 111
color_cte            : 98
compSemMasMenosYGenCuad : 104
compSemYGenCuadYO    : 155
comprobarSemanticaOperadoresRelacionales : 147
comprobarSemanticaPorEntre : 69
condicion            : 109
condicionAuxiliar1   : 120
creaFigFuncSimb      : 88
creaFigVar           : 88 89
creaTablaFunc        : 1
creaTablaVar         : 2 12 79
cte_bool             : 97 186
dibujar              : 112
dibujarAuxiliar1     : 116
eliminarPisoFalso    : 159
empty                : 3 5 7 9 11 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 66 68 72 76 83 85 87 90 103 107 122 124 130 138 141 145 148 156 173
escritura            : 110
escrituraAuxiliar1   : 134 137
escrituraAuxiliar2   : 134 137
estatuto             : 86 125
exp                  : 77 77 78 78 105 106 116 116 118 118 126 142 146 147 170
expAuxiliar1         : 104
expresion            : 74 119 120 131 135 155 159
expresionAuxiliar1   : 146
expresionAuxiliar2   : 147
expresionAuxiliar3   : 147
expresionAuxiliar4   : 155
factor               : 69
factorAuxiliar1      : 160
factorAuxiliar2      : 160 166
factorAuxiliar3      : 161
figura               : 88 89
figura_atributos     : 88 89 102
figura_atributosAuxiliar1 : 96
figura_atributosAuxiliar2 : 88 89 102
figuras              : 6
figurasAuxiliar      : 1
figurasAuxiliar1     : 88 89
funciones            : 10
funcionesAuxiliar    : 1
funcionesAuxiliar1   : 79
funcionesAuxiliar2   : 79 82
funcionesAuxiliar3   : 79
funcionesAuxiliar4   : 79 86
genCuadRetorno       : 73
generarAccionERA     : 139
generarAccionGoSub   : 139
generarAccionParam   : 140 144
generarCuadCondCiclo : 119
generarCuadCondicionGotoFElse : 121
generarCuadCondicionGotoFIf : 120
generarCuadRetCiclo  : 119
gravedad             : 8
gravedadAuxiliar     : 1
incremento           : 114 119
incrementoAuxiliar1  : 126
liberaTablaVars      : 79
listaVar             : 174
lista_cte            : 132
lista_cteAuxiliar1   : 169 172
lista_cteAuxiliar2   : 169 172
llamada              : 113 168
llamadaAuxiliar1     : 139
llamadaAuxiliar2     : 140 144
llamadaAuxiliar3     : 140 144
llenarGotof          : 120
operadorEntre        : 70
operadorMas          : 106
operadorMenos        : 105
operadorO            : 158
operadorPor          : 71
operadorY            : 157
pantalla             : 4
pantallaAuxiliar     : 1
programa             : 0
retorno              : 115
retornoAuxiliar1     : 73
sp_cte               : 75 133 136 143 171
termino              : 70 71 104
terminoAuxiliar1     : 69
tipo                 : 63 79 80 82 174
tipo_lista           : 64
variables            : 2 84
variablesAuxiliar    : 1
variablesAuxiliar1   : 62 67
variablesAuxiliar2   : 62 65 67
variablesAuxiliar3   : 62 67

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (50) creaTablaFunc -> . empty
    (195) empty -> .

    ID              reduce using rule 195 (empty -> .)

    creaTablaFunc                  shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) programa -> PROGRAMA creaTablaFunc . ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar

    ID              shift and go to state 5


state 4

    (50) creaTablaFunc -> empty .

    ID              reduce using rule 50 (creaTablaFunc -> empty .)


state 5

    (1) programa -> PROGRAMA creaTablaFunc ID . agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (51) agregaGlobalTabla -> . empty
    (195) empty -> .

    SEMICOLON       reduce using rule 195 (empty -> .)

    agregaGlobalTabla              shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla . SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar

    SEMICOLON       shift and go to state 8


state 7

    (51) agregaGlobalTabla -> empty .

    SEMICOLON       reduce using rule 51 (agregaGlobalTabla -> empty .)


state 8

    (1) programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON . variablesAuxiliar pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (2) variablesAuxiliar -> . creaTablaVar variables
    (3) variablesAuxiliar -> . empty
    (53) creaTablaVar -> . empty
    (195) empty -> .

    PANTALLA        reduce using rule 195 (empty -> .)
    FIGURAS         reduce using rule 195 (empty -> .)
    GRAVEDAD        reduce using rule 195 (empty -> .)
    FUNCIONES       reduce using rule 195 (empty -> .)
    APOLO           reduce using rule 195 (empty -> .)
    VARIABLES       reduce using rule 195 (empty -> .)

    variablesAuxiliar              shift and go to state 9
    creaTablaVar                   shift and go to state 10
    empty                          shift and go to state 11

state 9

    (1) programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar . pantallaAuxiliar figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (4) pantallaAuxiliar -> . pantalla
    (5) pantallaAuxiliar -> . empty agregarCuadDefectoPantalla
    (77) pantalla -> . PANTALLA L_PAREN exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemPantalla
    (195) empty -> .

    PANTALLA        shift and go to state 15
    FIGURAS         reduce using rule 195 (empty -> .)
    GRAVEDAD        reduce using rule 195 (empty -> .)
    FUNCIONES       reduce using rule 195 (empty -> .)
    APOLO           reduce using rule 195 (empty -> .)

    pantallaAuxiliar               shift and go to state 12
    pantalla                       shift and go to state 13
    empty                          shift and go to state 14

state 10

    (2) variablesAuxiliar -> creaTablaVar . variables
    (62) variables -> . VARIABLES variablesAuxiliar1 ID agregaVarTabla variablesAuxiliar2 SEMICOLON variablesAuxiliar3

    VARIABLES       shift and go to state 17

    variables                      shift and go to state 16

state 11

    (3) variablesAuxiliar -> empty .
    (53) creaTablaVar -> empty .

    PANTALLA        reduce using rule 3 (variablesAuxiliar -> empty .)
    FIGURAS         reduce using rule 3 (variablesAuxiliar -> empty .)
    GRAVEDAD        reduce using rule 3 (variablesAuxiliar -> empty .)
    FUNCIONES       reduce using rule 3 (variablesAuxiliar -> empty .)
    APOLO           reduce using rule 3 (variablesAuxiliar -> empty .)
    VARIABLES       reduce using rule 53 (creaTablaVar -> empty .)


state 12

    (1) programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar . figurasAuxiliar gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (6) figurasAuxiliar -> . figuras
    (7) figurasAuxiliar -> . empty
    (88) figuras -> . FIGURAS creaFigFuncSimb asignarAlcance figura ID checarFiguraId L_BRACES figura_atributos figura_atributosAuxiliar2 R_BRACES creaFigVar figurasAuxiliar1 SEMICOLON
    (195) empty -> .

    FIGURAS         shift and go to state 21
    GRAVEDAD        reduce using rule 195 (empty -> .)
    FUNCIONES       reduce using rule 195 (empty -> .)
    APOLO           reduce using rule 195 (empty -> .)

    figurasAuxiliar                shift and go to state 18
    figuras                        shift and go to state 19
    empty                          shift and go to state 20

state 13

    (4) pantallaAuxiliar -> pantalla .

    FIGURAS         reduce using rule 4 (pantallaAuxiliar -> pantalla .)
    GRAVEDAD        reduce using rule 4 (pantallaAuxiliar -> pantalla .)
    FUNCIONES       reduce using rule 4 (pantallaAuxiliar -> pantalla .)
    APOLO           reduce using rule 4 (pantallaAuxiliar -> pantalla .)


state 14

    (5) pantallaAuxiliar -> empty . agregarCuadDefectoPantalla
    (25) agregarCuadDefectoPantalla -> . empty
    (195) empty -> .

    FIGURAS         reduce using rule 195 (empty -> .)
    GRAVEDAD        reduce using rule 195 (empty -> .)
    FUNCIONES       reduce using rule 195 (empty -> .)
    APOLO           reduce using rule 195 (empty -> .)

    empty                          shift and go to state 22
    agregarCuadDefectoPantalla     shift and go to state 23

state 15

    (77) pantalla -> PANTALLA . L_PAREN exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemPantalla

    L_PAREN         shift and go to state 24


state 16

    (2) variablesAuxiliar -> creaTablaVar variables .

    PANTALLA        reduce using rule 2 (variablesAuxiliar -> creaTablaVar variables .)
    FIGURAS         reduce using rule 2 (variablesAuxiliar -> creaTablaVar variables .)
    GRAVEDAD        reduce using rule 2 (variablesAuxiliar -> creaTablaVar variables .)
    FUNCIONES       reduce using rule 2 (variablesAuxiliar -> creaTablaVar variables .)
    APOLO           reduce using rule 2 (variablesAuxiliar -> creaTablaVar variables .)


state 17

    (62) variables -> VARIABLES . variablesAuxiliar1 ID agregaVarTabla variablesAuxiliar2 SEMICOLON variablesAuxiliar3
    (63) variablesAuxiliar1 -> . tipo
    (64) variablesAuxiliar1 -> . tipo_lista
    (175) tipo -> . ENTERO
    (176) tipo -> . FLOTANTE
    (177) tipo -> . BOOLEANO
    (178) tipo -> . TEXTO
    (174) tipo_lista -> . LISTA listaVar tipo L_BRACKETS CTE_I R_BRACKETS

    ENTERO          shift and go to state 28
    FLOTANTE        shift and go to state 29
    BOOLEANO        shift and go to state 30
    TEXTO           shift and go to state 31
    LISTA           shift and go to state 32

    variablesAuxiliar1             shift and go to state 25
    tipo                           shift and go to state 26
    tipo_lista                     shift and go to state 27

state 18

    (1) programa -> PROGRAMA creaTablaFunc ID agregaGlobalTabla SEMICOLON variablesAuxiliar pantallaAuxiliar figurasAuxiliar . gravedadAuxiliar funcionesAuxiliar apoloAuxiliar
    (8) gravedadAuxiliar -> . gravedad
    (9) gravedadAuxiliar -> . empty agregarCuadDefectoGravedad
    (78) gravedad -> . GRAVEDAD L_PAREN exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemGravedad
    (195) empty -> .

    GRAVEDAD        shift and go to state 36
    FUNCIONES       reduce using rule 195 (empty -> .)
    APOLO           reduce using rule 195 (empty -> .)

    gravedadAuxiliar               shift and go to state 33
    gravedad                       shift and go to state 34
    empty                          shift and go to state 35

state 19

    (6) figurasAuxiliar -> figuras .

    GRAVEDAD        reduce using rule 6 (figurasAuxiliar -> figuras .)
    FUNCIONES       reduce using rule 6 (figurasAuxiliar -> figuras .)
    APOLO           reduce using rule 6 (figurasAuxiliar -> figuras .)


state 20

    (7) figurasAuxiliar -> empty .

    GRAVEDAD        reduce using rule 7 (figurasAuxiliar -> empty .)
    FUNCIONES       reduce using rule 7 (figurasAuxiliar -> empty .)
    APOLO           reduce using rule 7 (figurasAuxiliar -> empty .)


state 21

    (88) figuras -> FIGURAS . creaFigFuncSimb asignarAlcance figura ID checarFiguraId L_BRACES figura_atributos figura_atributosAuxiliar2 R_BRACES creaFigVar figurasAuxiliar1 SEMICOLON
    (59) creaFigFuncSimb -> . empty
    (195) empty -> .

    CUADRADO        reduce using rule 195 (empty -> .)
    CIRCULO         reduce using rule 195 (empty -> .)
    TRIANGULO       reduce using rule 195 (empty -> .)
    LINEA           reduce using rule 195 (empty -> .)

    creaFigFuncSimb                shift and go to state 37
    empty                          shift and go to state 38

state 22

    (25) agregarCuadDefectoPantalla -> empty .

    FIGURAS         reduce using rule 25 (agregarCuadDefectoPantalla -> empty .)
    GRAVEDAD        reduce using rule 25 (agregarCuadDefectoPantalla -> empty .)
    FUNCIONES       reduce using rule 25 (agregarCuadDefectoPantalla -> empty .)
    APOLO           reduce using rule 25 (agregarCuadDefectoPantalla -> empty .)


state 23

    (5) pantallaAuxiliar -> empty agregarCuadDefectoPantalla .

    FIGURAS         reduce using rule 5 (pantallaAuxiliar -> empty agregarCuadDefectoPantalla .)
    GRAVEDAD        reduce using rule 5 (pantallaAuxiliar -> empty agregarCuadDefectoPantalla .)
    FUNCIONES       reduce using rule 5 (pantallaAuxiliar -> empty agregarCuadDefectoPantalla .)
    APOLO           reduce using rule 5 (pantallaAuxiliar -> empty agregarCuadDefectoPantalla .)


state 24

    (77) pantalla -> PANTALLA L_PAREN . exp COMMA exp R_PAREN SEMICOLON agregarCuadYCompSemPantalla
    (104) exp -> . termino compSemMasMenosYGenCuad expAuxiliar1
    (69) termino -> . factor comprobarSemanticaPorEntre terminoAuxiliar1
    (159) factor -> . L_PAREN agregarPisoFalso expresion R_PAREN eliminarPisoFalso
    (160) factor -> . factorAuxiliar1 factorAuxiliar2
    (161) factor -> . factorAuxiliar3
    (162) factorAuxiliar1 -> . PLUS_OP
    (163) factorAuxiliar1 -> . MINUS_OP
    (166) factorAuxiliar3 -> . factorAuxiliar2
    (167) factorAuxiliar3 -> . ID checarDefID agregarIdHaciaPilas
    (168) factorAuxiliar3 -> . llamada
    (164) factorAuxiliar2 -> . CTE_I
    (165) factorAuxiliar2 -> . CTE_F
    (139) llamada -> . ID checarSiExisteFuncion generarAccionERA L_PAREN llamadaAuxiliar1 R_PAREN generarAccionGoSub

    L_PAREN         shift and go to state 39
    PLUS_OP         shift and go to state 46
    MINUS_OP        shift and go to state 47
    ID              shift and go to state 48
    CTE_I           shift and go to state 50
    CTE_F           shift and go to state 51

    exp                            shift and go to state 40
    termino                        shift and go to state 41
    factor                         shift and go to state 42
    factorAuxiliar1                shift and go to state 43
    factorAuxiliar2                shift and go to state 44
    factorAuxiliar3                shift and go to state 45
    llamada                        shift and go to state 49

state 25

    (62) variables -> VARIABLES variablesAuxiliar1 . ID agregaVarTabla variablesAuxiliar2 SEMICOLON variablesAuxiliar3

    ID              shift and go to state 52


state 26

    (63) variablesAuxiliar1 -> tipo .

    ID              reduce using rule 63 (variablesAuxiliar1 -> tipo .)


state 27

    (64) variablesAuxiliar1 -> tipo_lista .

    ID              reduce using rule 64 (variablesAuxiliar1 -> tipo_lista .)


state 28

    (175) tipo -> ENTERO .

    ID              reduce using rule 175 (tipo -> ENTERO .)
    L_BRACKETS      reduce using rule 175 (tipo -> ENTERO .)


state 29

    (176) tipo -> FLOTANTE .

    ID              reduce using rule 176 (tipo -> FLOTANTE .)
    L_BRACKETS      reduce using rule 176 (tipo -> FLOTANTE .)


state 30

    (177) tipo -> BOOLEANO .

    ID              reduce using rule 177 (tipo -> BOOLEANO .)
    L_BRACKETS      reduce using rule 177 (tipo -> BOOLEANO .)


state 31

    (178) tipo -> TEXTO .
